--- a/introemacs.bib
+++ b/introemacs.bib
@@ -37,7 +37,8 @@
 
 @MISC{will:uno,
   author	= {William Blum},
-  title		= {{SumatraPDF} for {\TeX} users},
+  title		= {{SumatraPDF} with {\TeX} additions -- {SumatraPDF} for {\TeX}
+                  users},
   year		= {2011},
   note		= {\url{http://william.famille-blum.org/software/sumatra/index.html}},
 }
