--- a/preambolo.sty
+++ b/preambolo.sty
@@ -51,6 +51,24 @@
   urlcolor   = {blue},
 }
 
+\lstset{
+  language=lisp,
+  morekeywords={add-hook,add-to-list,eval-after-load,quote,setq,setq-default},
+  basicstyle=\small\ttfamily,
+  keywordstyle=\color{blue}\bfseries,
+  commentstyle=\color{red},
+  stringstyle=\color{purple},
+  breaklines=true,
+  showstringspaces=false,
+  belowcaptionskip=\bigskipamount,
+  literate=
+  {à}{{\`a}}1
+  {è}{{\`e}}1
+  {ì}{{\`i}}1
+  {ò}{{\`o}}1
+  {ù}{{\`u}}1,
+}
+
 \providecommand{\emacs}{Emacs}
 \providecommand{\auctex}{AUC\TeX{}}
 \providecommand{\simbolo}{url:}
