aggiungo utenti noti :-D

--- a/introemacs.tex
+++ b/introemacs.tex
@@ -54,12 +54,22 @@ ufficiale \url{http://creativecommons.org/licenses/by-nc-sa/3.0/deed.it}.
 \chapter{Presentazione}
 \label{chap:presentazione}
 
-Questa guida tematica presenta il programma GNU Emacs ed il pacchetto
-\auctex{} per i principali sistemi operativi: Windows, GNU/Linux e Mac
-OS. Dopo una introduzione al programma, si spiega come installare (e
-configurare alcune funzioni) \emacs{} e \auctex{} per scrivere
-documenti \LaTeX. Per finire si dà qualche accenno per personalizzare e
-rendere più efficiente \emacs.
+Emacs è uno dei più vecchi e potenti editor di testo in circolazione e può
+vantare fra i suoi utenti Donald Knuth (l'inventore di \TeX{}) e Laslie Lamport
+(l'autore di \LaTeX{}).
+% Fonti per Donald Knuth:
+% https://www.informit.com/articles/article.aspx?p=1193856
+% http://tex.loria.fr/litte/knuth-interview
+% Fonte per Leslie Lamport:
+% http://www.budiu.info/blog/2007/05/03/an-interview-with-leslie-lamport/
+% Mihai Budui è un ricercatore della Microsoft
+% (https://research.microsoft.com/en-us/people/mbudiu/), come Lamport, quindi
+% l'intervista dovrebbe essere attendibile.
+Questa guida tematica presenta il programma GNU Emacs ed il pacchetto \auctex{}
+per i principali sistemi operativi: Windows, GNU/Linux e Mac OS. Dopo una
+introduzione al programma, si spiega come installare (e configurare alcune
+funzioni) \emacs{} e \auctex{} per scrivere documenti \LaTeX. Per finire si dà
+qualche accenno per personalizzare e rendere più efficiente \emacs.
 
 Si tenga presente che la guida è ben lontana dall'essere esauriente
 per un editore di testi così importante come Emacs. Per ogni altro
