--- a/introemacs.tex
+++ b/introemacs.tex
@@ -88,12 +88,19 @@ progetto dal repository ufficiale presente sul sito
 segnalazione di errori, refusi, commenti e suggerimenti o ogni altra
 forma di collaborazione.
 
+% \begin{tabular}{r@{~}c@{~}l}
+%   \textsc{Mosè Giordano}   & \textbullet & \textcolor{red}{\texttt{nome dot cognome at dominio dot it}} \\
+%   \textsc{Orlando Iovino}  & \textbullet & \texttt{orlando dot iovino at yahoo dot it}                  \\
+%   \textsc{Matteo Leccardi} & \textbullet & \textcolor{red}{\texttt{nome dot cognome at dominio dot it}} \\
+% \end{tabular}
+
+
 \begin{tabular}{cc}
 \hspace{.32\textwidth} &                                                              \\
                        & \textsc{Mosè Giordano}                                       \\
-                       & \textcolor{red}{\texttt{nome dot cognome at dominio dot it}} \\[1.5ex]
+                       & \textcolor{red}{\texttt{nome dot cognome at dominio dot it}} \\[0.5ex]
                        & \textsc{Orlando Iovino}                                      \\
-                       & \texttt{orlando dot iovino at yahoo dot it}                  \\[1.5ex]
+                       & \texttt{orlando dot iovino at yahoo dot it}                  \\[0.5ex]
                        & \textsc{Matteo Leccardi}                                     \\
                        & \textcolor{red}{\texttt{nome dot cognome at dominio dot it}} \\
 \end{tabular}
