introemacs.bib: aggiunto un record bibliografico

--- a/introemacs.bib
+++ b/introemacs.bib
@@ -35,6 +35,14 @@
   note		= {\url{http://www.emacswiki.org}},
 }
 
+@MISC{setupwindows,
+  author	= {Joachim Schlosser},
+  title		= {{\LaTeX} – a complete setup for {Windows}},
+  year		= {2012},
+  month         = {12},
+  note		= {\url{http://www.latexbuch.de/files/latexsystem-en.pdf}},
+}
+
 @MISC{will:uno,
   author	= {William Blum},
   title		= {{SumatraPDF} with {\TeX} additions -- {SumatraPDF} for {\TeX}
