--- a/preambolo.sty
+++ b/preambolo.sty
@@ -60,6 +60,7 @@
   breaklines=true,
   showstringspaces=false,
   belowcaptionskip=\bigskipamount,
+  escapeinside={£}{£},
   literate=
   {à}{{\`a}}1
   {è}{{\`e}}1
