aggiungo capitolo di introduzione a Emacs e cheat sheet
Per ora il capitolo è vuoto, a parte il cheat sheet, però nei commenti
ho aggiunto una breve indicazione di quello che si potrebbe mettere.

--- a/preambolo.sty
+++ b/preambolo.sty
@@ -17,6 +17,7 @@
 
 \RequirePackage{ccicons}
 \RequirePackage{booktabs}
+\RequirePackage{longtable}
 
 % graphicx è caricato dalla classe
 \graphicspath{{figure/}}
