(1) preambolo.sty: Rimossi definitivamente i comandi \script, \extname, prgname e \zipname; (2) introemacs.tex: Sostituiti comandi \zipname con \progstyle

--- a/introemacs.tex
+++ b/introemacs.tex
@@ -183,7 +183,7 @@ di installazione. {\emacs} si può utilizzare semplicemente procurandosi
 l'archivio che contiene gli eseguibili.
 
 All'indirizzo \url{http://ftp.gnu.org/pub/gnu/emacs/windows/} si
-scarica l'archivio compresso \zipname{emacs-24.2-bin-i386.zip} e lo si
+scarica l'archivio compresso \progstyle{emacs-24.2-bin-i386.zip} e lo si
 decomprime in una posizione di comodo; una buona soluzione, per
 esempio, è decomprimere il suddetto archivio in
 \directory{C:/Programmi/Emacs/} che assumeremo, da questo momento,
@@ -201,7 +201,7 @@ trova da solo.
 \section{Installare AUC\TeX}
 \label{oi:sec:installauctex}
 
-Si scarica l'archivio compresso \zipname{auctex-11.87-e24.2-msw.zip}
+Si scarica l'archivio compresso \progstyle{auctex-11.87-e24.2-msw.zip}
 dall'indirizzo
 \url{http://www.gnu.org/software/auctex/download-for-windows} e lo si
 decomprime in \directory{C:/Programmi/Emacs/}.  Si noti che alcuni
