--- a/preambolo.sty
+++ b/preambolo.sty
@@ -73,10 +73,7 @@
 \providecommand{\simbolo}{url:}
 \providecommand{\sito}[2]{(\href{#1}{\small\scshape\simbolo\ #2})}
 
-%\providecommand{\script}{}  % TODO
-%\providecommand{\extname}{} % TODO
-%\providecommand{\prgname}{} % TODO
- \providecommand{\zipname}[1]{{\sffamily#1}}
+%\providecommand{\zipname}[1]{{\sffamily#1}}
 
 %%% Local Variables:
 %%% mode: latex
