--- a/TODO.org
+++ b/TODO.org
@@ -5,7 +5,8 @@
    CLOSED: [2012-12-20 gio 16:58]
 * DONE Aggiungere la licenza all'inizio e vederne l'interazione con quella delle guide tematiche
    CLOSED: [2012-12-20 gio 15:33]
-* TODO Spiegare come risolvere il problema su Windows per la ricerca diretta-inversa;
+* DONE Spiegare come risolvere il problema su Windows per la ricerca diretta-inversa;
+  CLOSED: [2013-01-31 gio 20:58] In realtà è cambiato tutto, anche per la ricerca diretta-inversa.
 * TODO Modificare la presentazione iniziale della guida: aggiungere gli indirizzi posta elettronica; ricordare il repository ufficiale per chi vuole collaborare;        
 * TODO Spiegare il file di .emacs e la sua posizione;
 * TODO Rivedere le epigrafi all'inizio dei capitoli: danno una spaziatura differente;
